@@ -28,6 +28,7 @@ import java.io.PrintStream;
 import java.io.Serializable;
 import java.net.URI;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -84,11 +85,15 @@ public class QTestUtil {
   private final String logDir;
   private final TreeMap<String, String> qMap;
   private final Set<String> qSkipSet;
-  private final LinkedList<String> srcTables;
+  public static final HashSet<String> srcTables = new HashSet<String>
+    (Arrays.asList(new String [] {
+        "src", "src1", "srcbucket", "srcbucket2", "src_json", "src_thrift",
+        "src_sequencefile", "srcpart"
+      }));
 
   private ParseDriver pd;
   private Hive db;
-  protected final HiveConf conf;
+  protected HiveConf conf;
   private Driver drv;
   private SemanticAnalyzer sem;
   private FileSystem fs;
@@ -184,6 +189,18 @@ public class QTestUtil {
     return null;
   }
 
+  public void initConf() {
+    if (miniMr) {
+      String fsName = conf.get("fs.default.name");
+      assert fsName != null;
+      // hive.metastore.warehouse.dir needs to be set relative to the jobtracker
+      conf.set("hive.metastore.warehouse.dir", fsName
+               .concat("/build/ql/test/data/warehouse/"));
+      conf.set("mapred.job.tracker", "localhost:" + mr.getJobTrackerPort());
+    }
+
+  }
+
   public QTestUtil(String outDir, String logDir, boolean miniMr, String hadoopVer) throws Exception {
     this.outDir = outDir;
     this.logDir = logDir;
@@ -197,17 +214,10 @@ public class QTestUtil {
       dfs = ShimLoader.getHadoopShims().getMiniDfs(conf, 4, true, null);
       FileSystem fs = dfs.getFileSystem();
       mr = new MiniMRCluster(4, fs.getUri().toString(), 1);
-
-      // hive.metastore.warehouse.dir needs to be set relative to the jobtracker
-      String fsName = conf.get("fs.default.name");
-      assert fsName != null;
-      conf.set("hive.metastore.warehouse.dir", fsName
-          .concat("/build/ql/test/data/warehouse/"));
-
-      conf.set("mapred.job.tracker", "localhost:" + mr.getJobTrackerPort());
     }
 
-    // System.out.println(conf.toString());
+    initConf();
+
     testFiles = conf.get("test.data.files").replace('\\', '/')
         .replace("c:", "");
 
@@ -216,8 +226,6 @@ public class QTestUtil {
     if ((ow != null) && ow.equalsIgnoreCase("true")) {
       overWrite = true;
     }
-
-    srcTables = new LinkedList<String>();
 
     init();
   }
@@ -290,6 +298,22 @@ public class QTestUtil {
     dis.close();
   }
 
+  /**
+   * Clear out any side effects of running tests
+   */
+  public void clearTestSideEffects () throws Exception {
+    // delete any tables other than the source tables
+    for (String s: db.getAllTables()) {
+      if (!srcTables.contains(s))
+        db.dropTable(MetaStoreUtils.DEFAULT_DATABASE_NAME, s);
+    }
+    // allocate and initialize a new conf since a test can
+    // modify conf by using 'set' commands
+    conf = new HiveConf (Driver.class);
+    initConf();
+  }
+
+
   public void cleanUp() throws Exception {
     String warehousePath = ((new URI(testWarehouse)).getPath());
     // Drop any tables that remain due to unsuccessful runs
@@ -329,8 +353,7 @@ public class QTestUtil {
   }
 
   public void createSources() throws Exception {
-    // Next create the three tables src, dest1 and dest2 each with two columns
-    // key and value
+    // Create a bunch of tables with columns key and value
     LinkedList<String> cols = new LinkedList<String>();
     cols.add("key");
     cols.add("value");
@@ -340,7 +363,6 @@ public class QTestUtil {
     part_cols.add("hr");
     db.createTable("srcpart", cols, part_cols, TextInputFormat.class,
         IgnoreKeyTextOutputFormat.class);
-    srcTables.add("srcpart");
 
     Path fpath;
     Path newfpath;
@@ -367,7 +389,6 @@ public class QTestUtil {
     runCreateTableCmd("CREATE TABLE srcbucket(key int, value string) CLUSTERED BY (key) INTO 2 BUCKETS STORED AS TEXTFILE");
     // db.createTable("srcbucket", cols, null, TextInputFormat.class,
     // IgnoreKeyTextOutputFormat.class, 2, bucketCols);
-    srcTables.add("srcbucket");
     for (String fname : new String[] {"srcbucket0.txt", "srcbucket1.txt"}) {
       fpath = new Path(testFiles, fname);
       newfpath = new Path(tmppath, fname);
@@ -380,7 +401,6 @@ public class QTestUtil {
         + "CLUSTERED BY (key) INTO 4 BUCKETS STORED AS TEXTFILE");
     // db.createTable("srcbucket", cols, null, TextInputFormat.class,
     // IgnoreKeyTextOutputFormat.class, 2, bucketCols);
-    srcTables.add("srcbucket2");
     for (String fname : new String[] {"srcbucket20.txt", "srcbucket21.txt",
         "srcbucket22.txt", "srcbucket23.txt"}) {
       fpath = new Path(testFiles, fname);
@@ -393,11 +413,9 @@ public class QTestUtil {
     for (String tname : new String[] {"src", "src1"}) {
       db.createTable(tname, cols, null, TextInputFormat.class,
           IgnoreKeyTextOutputFormat.class);
-      srcTables.add(tname);
     }
     db.createTable("src_sequencefile", cols, null,
         SequenceFileInputFormat.class, SequenceFileOutputFormat.class);
-    srcTables.add("src_sequencefile");
 
     Table srcThrift = new Table("src_thrift");
     srcThrift.setInputFormatClass(SequenceFileInputFormat.class.getName());
@@ -408,13 +426,11 @@ public class QTestUtil {
     srcThrift.setSerdeParam(Constants.SERIALIZATION_FORMAT,
         TBinaryProtocol.class.getName());
     db.createTable(srcThrift);
-    srcTables.add("src_thrift");
 
     LinkedList<String> json_cols = new LinkedList<String>();
     json_cols.add("json");
     db.createTable("src_json", json_cols, null, TextInputFormat.class,
         IgnoreKeyTextOutputFormat.class);
-    srcTables.add("src_json");
 
     // load the input data into the src table
     fpath = new Path(testFiles, "kv1.txt");
@@ -512,7 +528,7 @@ public class QTestUtil {
       createSources();
     }
 
-    CliSessionState ss = new CliSessionState(conf);
+    CliSessionState ss = new CliSessionState(new HiveConf(Driver.class));
     assert ss != null;
     ss.in = System.in;
 
