@@ -15,18 +15,30 @@ import org.antlr.runtime.tree.*;
 
 public class $className extends TestCase {
 
-  private QTestUtil qt;
+  private static QTestUtil qt;
+  static {
+    try {
+      qt = new QTestUtil("$resultsDir.getCanonicalPath()", "$logDir.getCanonicalPath()");
+      // do a one time initialization
+      qt.cleanUp();
+      qt.createSources();
+
+    } catch (Exception e) {
+      System.out.println("Exception: " + e.getMessage());
+      e.printStackTrace();
+      System.out.flush();
+      fail("Unexpected exception in static initialization");
+    }
+  }
 
   public $className(String name) {
     super(name);
-    qt = null;
   }
 
   @Override
   protected void setUp() {
     try {
-      qt = new QTestUtil("$resultsDir.getCanonicalPath()", "$logDir.getCanonicalPath()");
-
+      qt.clearTestSideEffects();
     }
     catch (Throwable e) {
       e.printStackTrace();
@@ -64,7 +76,7 @@ public class $className extends TestCase {
         return;
       }
       
-      qt.cliInit("$fname");
+      qt.cliInit("$fname", false);
       int ecode = qt.executeClient("$fname");
       if (ecode == 0) {
         fail("Client Execution failed with error code = " + ecode
